--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -19,21 +19,13 @@
         </li>
 
         <li>
-            <a href="{% url 'user_responses_main' %}" class="{% if request.path == '/responses/' %}active{% endif %}">
-                <i class="fa-regular fa-pen-to-square" style="width: 20px; height: 20px;"></i>
-                <span>My Responses</span>
-            </a>
-        </li>
-        
-
-        <li>
             <a href="{% url 'profile' %}" class="{%if request.path == '/profile/' %}active{% endif %}">
                 <img src="{% static 'users/img/profile.svg' %}" alt="Profile" class="icon">
                 <span>Profile</span>
             </a>
         </li>
         <div class="logout">
-            <a href="{% url 'logout' %}" class="{%if request.path == '/logout/' %}active{% endif %}">
+            <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
             <img src="{% static 'users/img/logout.svg' %}" alt="Logout" class="icon">
             <span>Logout</span>
             </a>
