edit client dashboard user statistics

--- a/client/templates/client/client_dashboard.html
+++ b/client/templates/client/client_dashboard.html
@@ -84,7 +84,7 @@
                                 callbacks: {
                                     label: function(tooltipItem) {
                                         var value = tooltipItem.raw;
-                                        return value === 0 ? 'No users' : value + 'sector';
+                                        return value === 0 ? 'No users' : value + ' Users';
                                     }
                                 }
                             }
