--- a/client/templates/client/programs_statistics.html
+++ b/client/templates/client/programs_statistics.html
@@ -7,6 +7,13 @@
     <div class="content">
         <div class="top-bar">
             <h1>Programs Statistics 📊</h1>
+
+            <div class="export-buttons">
+                <a href="{% url 'export_programs_statistics_csv' %}" class="custom-btn">
+                    Generate Report (CSV)
+                </a>
+            </div>
+
         </div>
 
         <!-- CHARTS -->
