--- a/client/static/client/css/statistics.css
+++ b/client/static/client/css/statistics.css
@@ -134,3 +134,27 @@ body {
     padding: 10px;
     margin-right: 40px;
 }
+
+
+.export-buttons {
+    position: absolute;
+    right: 5px;
+    margin-right: 55px;
+}
+
+.custom-btn {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 30px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.custom-btn:hover {
+    background-color: #0056b3;
+}
