Update and link the Profile Page

--- a/users/templates/users/Profile/show_profile.html
+++ b/users/templates/users/Profile/show_profile.html
@@ -1,3 +1,4 @@
+<body class="profile-page">
 {% extends "users/base.html" %}
 {% load static %}
 
@@ -69,3 +70,4 @@
     
 
 {% endblock %}
+</body>
