--- a/users/templates/users/Profile/update_profile.html
+++ b/users/templates/users/Profile/update_profile.html
@@ -1,3 +1,4 @@
+<body class="update-page">
 {% extends "users/base.html" %}
 {% load static %}
 
@@ -32,25 +33,37 @@
             <div class="form-group">
                 <label>First Name: <span class="required">*</span></label>
                 {{ form.first_name }}
+                {% if form.first_name.errors %}
+                <small class="text-danger">{{ form.first_name.errors.0 }}</small>
+                 {% endif %}
             </div>
 
             <div class="form-group">
                 <label>Last Name: <span class="required">*</span></label>
                 {{ form.last_name }}
+                {% if form.last_name.errors %}
+                <small class="text-danger">{{ form.last_name.errors.0 }}</small>
+                {% endif %}
             </div>
 
             <div class="form-group">
                 <label>Username: <span class="required">*</span></label>
                 {{ form.username }}
+                {% if form.username.errors %}
+                <small class="text-danger">{{ form.username.errors.0 }}</small>
+                {% endif %}
             </div>
 
             <div class="form-group">
                 <label>New Password:</label>
                 <div class="password-wrapper">
                     <input type="password" id="new_password" name="new_password" class="input-wrapper"
-                           placeholder="Enter new password" pattern=".{8,}" title="Password must be at least 8 characters long">
+                           placeholder="Enter new password">
                     <i class="fa fa-eye password-toggle" data-target="new_password"></i>
                 </div>
+                {% if form.new_password.errors %}
+                    <small class="text-danger">{{ form.new_password.errors.0 }}</small>
+                {% endif %}
             </div>
             
             <div class="form-group">
@@ -60,17 +73,26 @@
                            placeholder="Confirm new password">
                     <i class="fa fa-eye password-toggle" data-target="confirm_password"></i>
                 </div>
+                {% if form.confirm_password.errors %}
+                    <small class="text-danger">{{ form.confirm_password.errors.0 }}</small>
+                {% endif %}
             </div>            
             
 
             <div class="form-group">
                 <label>Email Address: <span class="required">*</span></label>
                 {{ form.email }}
+                {% if form.email.errors %}
+                <small class="text-danger">{{ form.email.errors.0 }}</small>
+                {% endif %}
             </div>
 
             <div class="form-group">
                 <label>Phone Number:</label>
                 {{ form.phone_number }}
+                {% if form.phone_number.errors %}
+                    <small class="text-danger">{{ form.phone_number.errors.0 }}</small>
+                {% endif %}
             </div>
 
             <div class="form-group">
@@ -79,27 +101,43 @@
                        min="18" max="100" required
                        title="Age must be between 18 and 100"
                        class="form-control"
-                       value="{{ form.age.value|default:'' }}">  
+                       value="{{ form.age.value|default:'' }}"> 
+                    {% if form.age.errors %}
+                       <small class="text-danger">{{ form.age.errors.0 }}</small>
+                   {% endif %} 
             </div>
             
             <div class="form-group">
                 <label>Gender: <span class="required">*</span></label>
                 {{ form.gender }}
+                {% if form.gender.errors %}
+                  <small class="text-danger">{{ form.gender.errors.0 }}</small>
+                {% endif %}
+
             </div>
 
             <div class="form-group">
                 <label>Ethnicity:</label>
                 {{ form.ethnicity }}
+                {% if form.ethnicity.errors %}
+                    <small class="text-danger">{{ form.ethnicity.errors.0 }}</small>
+                {% endif %}
             </div>
 
             <div class="form-group">
                 <label>Last Time Worked:  <span class="required">*</span></label>
                 {{ form.last_time_to_work }}
+                {% if form.last_time_to_work.errors %}
+                    <small class="text-danger">{{ form.last_time_to_work.errors.0 }}</small>>
+                {% endif %}
             </div>
 
             <div class="form-group">
                 <label>Sector: <span class="required">*</span></label>
                 {{ form.sector }}
+                {% if form.sector.errors %}
+                    <small class="text-danger">{{ form.sector.errors.0 }}</small>
+                {% endif %}
             </div>
         </div>
 
@@ -165,3 +203,6 @@
     
     
 {% endblock %}
+
+</body>
+
