--- a/client/templates/view_user_response.html
+++ b/client/templates/view_user_response.html
@@ -1,13 +1,14 @@
-{% extends 'client/base.html' %}
 {% load static %}
-
-{% block title %}Response by {{ user_response.user.user.first_name }}{% endblock %}
-
-{% block extra_css %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Response by {{ user_response.user.user.first_name }}</title>
     <link rel="stylesheet" href="{% static 'css/view_user_response.css' %}">
-{% endblock %}
+</head>
+<body>
 
-{% block content %}
     <div class="content">
         <div class="top-bar">
             <a href="{% url 'manage_questionnaires' %}" class="back-btn">← Back</a>
@@ -43,4 +44,6 @@
             {% endfor %}
         </div>
     </div>
-{% endblock %}
+
+</body>
+</html>
